# ivar

./: CMakeLists.txt  Dockerfile  Doxyfile  README.md  config.h.in  configure.ac
.github/workflows/: ccpp.yml
data/: omicron_s_3ins_9del.bam  omicron_s_3ins_9del.bam.bai  test.gff  test.strand.pileup  test_multiple_segments.gff  test_strand.gff  test_unpaired.sorted.bam  test_unpaired.sorted.bam.bai
data/db/: test_ref.fa.fai
data/version_bump_tests/: test_1.bam  test_2.bam  test_3.bam  test_4.bam  test_5.bam  test_6.bam  test_consensus.fa  test_variants_small.tsv  vbump_amplicon.bam  vbump_amplicon.mpileup  vbump_amplicon.sorted.bam  vbump_consensus.bam  vbump_consensus.sam  vbump_consensus.sorted.bam  vbump_consensus_ivar.fa  vbump_consensus_ivar.qual.txt  vbump_consensus_var.txt  vbump_majority.bam  vbump_reads.bam  vbump_reads.mpileup  vbump_reads.sam  vbump_reads.sorted.bam
docs/: MANUAL.md
docs/html/: cookbookpage.html  dir_49e56c817e5e54854c35e136979f97ca.html  index.html  installpage.html  manualpage.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  searchdata.js
docs/latex/: cookbookpage.tex  index.tex  installpage.tex  manualpage.tex  refman.tex
docs/man/man3/: cookbookpage.3  installpage.3  manualpage.3
pipeline_consensus/: Snakefile
scripts/: primer_bam_to_bed.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  alignment.cpp  allele_functions.cpp  allele_functions.h  call_consensus.cpp  call_consensus_clustering.cpp  call_consensus_clustering.h  call_consensus_pileup.cpp  call_consensus_pileup.h  call_variants.cpp  call_variants.h  clustering.cpp  clustering.h  estimate_error.cpp  estimate_error.h  genomic_position.cpp  genomic_position.h  get_common_variants.cpp  get_masked_amplicons.cpp  get_masked_amplicons.h  gmm.cpp  gmm.h  interval_tree.cpp  interval_tree.h  ivar.cpp  kmeans.cpp  kmeans.h  parse_gff.cpp  parse_gff.h  population_estimate.cpp  population_estimate.h  primer_bed.cpp  primer_bed.h  ref_seq.cpp  ref_seq.h  remove_reads_from_amplicon.cpp  saga.cpp  saga.h  (+6 more)
src/alglib/: create_static_library.sh
src/include/: armadillo
tests/: CMakeLists.txt  Makefile.am  check_quality_trim.cpp  check_quality_trim_unpaired.cpp  test_amplicon_search.cpp  test_call_consensus_from_plup.cpp  test_clustering.cpp  test_clustering_consensus.cpp  test_clustering_majority.cpp  test_consensus_min_depth.cpp  test_consensus_seq_id.cpp  test_getmasked.cpp  test_gff3.cpp  test_interval_tree.cpp  test_isize_trim.cpp  test_multiple_segments_ref_seq.cpp  test_new_variants.cpp  test_preprocessing.cpp  test_primer_trim.cpp  test_primer_trim_edge_cases.cpp  test_quality_trim_unpaired.cpp  test_ref_seq.cpp  test_removereads.cpp  test_trim.cpp  test_unit_new_consensus.cpp  test_unpaired_trim.cpp  test_variants.cpp  test_variants_reverse_strand.cpp
